# monada

./: .gitignore  Cargo.toml  DESIGN.md  README.md  clippy.toml  flake.nix  monada-hashes.txt  rust-toolchain.toml
.github/workflows/: ci.yml
crates/monada-chess/: Cargo.toml  build.rs
crates/monada-chess/examples/: gen_pieces.rs
crates/monada-chess/map/: manifest.toml
crates/monada-chess/map/assets/pieces/: bishop_black.kv6  bishop_white.kv6  king_black.kv6  king_white.kv6  knight_white.kv6  pawn_black.kv6  pawn_white.kv6  queen_black.kv6  queen_white.kv6  rook_black.kv6
crates/monada-chess/map/scripts/: main.rhai
crates/monada-chess/src/: main.rs
crates/monada-chess/tests/: lockstep.rs  rules.rs
crates/monada-editor/: Cargo.toml
crates/monada-editor/src/: main.rs
crates/monada-fixed/: Cargo.toml  build.rs
crates/monada-fixed/fuzz/: Cargo.toml  README.md
crates/monada-fixed/fuzz/fuzz_targets/: mul_assoc.rs  roundtrip.rs  sqrt.rs
crates/monada-fixed/src/: lib.rs  scalar.rs  trig.rs  vec.rs
crates/monada-fixed/tests/: arithmetic.rs
crates/monada-format/: Cargo.toml
crates/monada-format/src/: lib.rs
crates/monada-host/: Cargo.toml
crates/monada-host/src/: cli.rs  lib.rs  main.rs  map_render.rs
crates/monada-net/: Cargo.toml
crates/monada-net/src/: lib.rs  lockstep.rs  quic.rs  replay.rs  session.rs  transport.rs  wire.rs
crates/monada-net/tests/: lockstep.rs  quic.rs
crates/monada-oracle/: Cargo.toml
crates/monada-oracle/src/: lib.rs  main.rs
crates/monada-oracle/tests/: golden.rs
crates/monada-physics/: Cargo.toml
crates/monada-physics/src/: lib.rs
crates/monada-render/: Cargo.toml
crates/monada-render/src/: camera.rs  lib.rs
crates/monada-render/tests/: sprite_projection.rs
crates/monada-script/: Cargo.toml
crates/monada-script/scripts/: command_demo.rhai  walk_circle.rhai
crates/monada-script/src/: driver.rs  lib.rs  rhai_backend.rs
crates/monada-script/tests/: chess.rs  command_demo.rs  determinism.rs  smoke.rs
crates/monada-sim/: Cargo.toml
crates/monada-sim/src/: command.rs  entity.rs  hash.rs  lib.rs  rng.rs  scenario.rs  sim.rs  storage.rs  world.rs
crates/monada-sim/tests/: determinism.rs  hash.rs  rng.rs  world.rs
crates/monada-voxvideo/: Cargo.toml
crates/monada-voxvideo/src/: lib.rs
crates/monada-web/: Cargo.toml
crates/monada-web/src/: main.rs
