[package]
name = "monada-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "monada native host binary: winit + roxlap render facade + sim loop glue."
# Application binary, not a library for downstream consumption.
publish = false

[[bin]]
name = "monada-host"
path = "src/main.rs"

[dependencies]
monada-sim = { workspace = true }
monada-render = { workspace = true }
# Render facade + camera/opticast types. Local path (sibling roxlap)
# matches monada-render's dependency on the same checkout.
# `hud` enables roxlap's egui overlay (SceneRenderer::paint_egui); the
# crate re-exports `egui` so we tessellate with the exact version it
# paints with.
roxlap-render = { path = "../../../roxlap/crates/roxlap-render", features = ["hud"] }
roxlap-core = { path = "../../../roxlap/crates/roxlap-core" }
winit = "0.30"
# egui input/output bridge for winit; egui itself comes via
# `roxlap_render::egui` so the versions can't drift.
egui-winit = { version = "0.29", default-features = false }

[lints]
workspace = true
