[package]
name = "monada-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "monada native host binary: winit + roxlap render facade + sim loop glue."
# Application binary, not a library for downstream consumption.
publish = false

[[bin]]
name = "monada-host"
path = "src/main.rs"

[dependencies]
monada-sim = { workspace = true }
monada-script = { workspace = true }
monada-fixed = { workspace = true }
monada-render = { workspace = true }
# Lockstep transport with the QUIC backend (M3 Phase B): the host's
# `--listen`/`--connect` two-process play.
monada-net = { workspace = true, features = ["quic"] }
# Render facade + camera/opticast types. roxlap 0.7.0 from crates.io
# (temporarily pinned to the published release, matching monada-render,
# while roxlap master is mid-refactor locally).
# `hud` enables roxlap's egui overlay (SceneRenderer::paint_egui); the
# crate re-exports `egui` so we tessellate with the exact version it
# paints with.
roxlap-render = { version = "0.7.0", features = ["hud"] }
roxlap-core = "0.7.0"
winit = "0.30"
# egui input/output bridge for winit; egui itself comes via
# `roxlap_render::egui` so the versions can't drift.
egui-winit = { version = "0.29", default-features = false }

[lints]
workspace = true
