[package]
name = "monada-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "monada native host binary: winit + roxlap render facade + sim loop glue."
# Application binary, not a library for downstream consumption.
publish = false

[[bin]]
name = "monada-host"
path = "src/main.rs"

[dependencies]
monada-sim = { workspace = true }
monada-script = { workspace = true }
monada-fixed = { workspace = true }
monada-render = { workspace = true }
# Map archive loading (tar.zst + manifest + SHA-256) for `--map` /
# `monada-chess`, and the SHA-256 map identity for MatchInfo.
monada-format = { workspace = true }
# Lockstep transport with the QUIC backend (M3 Phase B): the host's
# `--listen`/`--connect` two-process play.
monada-net = { workspace = true, features = ["quic"] }
# Render facade + camera/opticast types. roxlap 0.8.0 via the sibling
# path checkout (workspace dep), matching monada-render.
# `hud` enables roxlap's egui overlay (SceneRenderer::paint_egui); the
# crate re-exports `egui` so we tessellate with the exact version it
# paints with.
roxlap-render = { workspace = true, features = ["hud"] }
roxlap-core = { workspace = true }
# Scene graph + voxel grid edit API (the map paints its world here), named
# in the host's scene accessors so one render path drives any map.
roxlap-scene = { workspace = true }
# KV6 sprite parsing + procedural boxes for the generic MapRender models.
roxlap-formats = { workspace = true }
# Render-side world math for picking-ray params (the sim wall stays in
# monada-sim; floats live only here, per DESIGN.md §3.1).
glam = { workspace = true }
winit = "0.30"
# egui input/output bridge for winit; egui itself comes via
# `roxlap_render::egui` so the versions can't drift.
egui-winit = { version = "0.29", default-features = false }
# Decode a map's `assets/*.png` skybox to RGBA8 (PNG only — the format
# the map ships).
image = { version = "0.25", default-features = false, features = ["png"] }

[lints]
workspace = true
