[package]
name = "monada-net"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
description = "monada lockstep transport: per-tick input bundling, command-delay, desync hashing."

[dependencies]

[lints]
workspace = true
