[package]
name = "monada-render"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
description = "monada sim -> roxlap-scene translator: per-frame interpolation, picking, egui HUD."

[dependencies]
# Floats are permitted here — render state is throwaway and never feeds
# back into sim (DESIGN.md §3.1). monada-fixed crosses the wall here:
# Q32.32 -> f64 conversion happens on this side only.
monada-fixed = { workspace = true }
glam = { workspace = true }
# roxlap 0.7.0 from crates.io. (Temporarily pinned to the published
# release instead of the sibling path checkout so monada builds while
# roxlap master is mid-refactor locally; switch back to `path = ...`
# to consume in-progress roxlap API again.)
roxlap-core = "0.7.0"
roxlap-formats = "0.7.0"
roxlap-scene = "0.7.0"
roxlap-render = "0.7.0"

[lints]
workspace = true
