[package]
name = "monada-render"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
description = "monada sim -> roxlap-scene translator: per-frame interpolation, picking, egui HUD."

[dependencies]
# Floats are permitted here — render state is throwaway and never feeds
# back into sim (DESIGN.md §3.1). monada-fixed crosses the wall here:
# Q32.32 -> f64 conversion happens on this side only.
monada-fixed = { workspace = true }
glam = { workspace = true }
# roxlap 0.8.0 via the sibling path checkout (workspace dep) — monada
# drives in-progress render features (directional lighting, sky).
roxlap-core = { workspace = true }
roxlap-formats = { workspace = true }
roxlap-scene = { workspace = true }
roxlap-render = { workspace = true }

[lints]
workspace = true
